k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: city-cleanup
  labels:
    name: city-cleanup
    environment: production
